--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -45,6 +45,6 @@ changelog:
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
 brews:
   - repository:
-      owner: koki-develop # Homebrew Taps 用のリポジトリのオーナー名
+      owner: KazuhiroIto0127 # Homebrew Taps 用のリポジトリのオーナー名
       name: homebrew-tap # Homebrew Taps 用のリポジトリ名
       token: "{{ .Env.TAP_GITHUB_TOKEN }}" # `TAP_GITHUB_TOKEN` 環境変数をトークンとして使うようにする
